migrate to Java 25
Signed-off-by: Igor Konnov <igor@konnov.phd>