@@ -1,7 +1,7 @@
 # Prebuilt Packages
 
-You need to download and install a Java Virtual Machine first. 
-We recommend version 17 of the [Eclipse Temurin][] or [Zulu][] builds of OpenJDK.
+You need to download and install a Java Virtual Machine first. Apalache requires Java 25. We recommend
+the [Eclipse Temurin][] or [Zulu][] builds of OpenJDK.
 
 Once you have installed Java, download the [latest
 release](https://github.com/apalache-mc/apalache/releases) and unpack into
@@ -15,10 +15,12 @@ better, add the `./bin` directory to your `PATH` and run `apalache-mc`.
 Alternatively, you can run Java directly with
 
 ```
-java.exe -jar ./lib/apalache.jar <args>
+java --sun-misc-unsafe-memory-access=allow -jar ./lib/apalache.jar <args>
 ```
+
+The packaged launch scripts supply this Java 25 compatibility option automatically.
 
 The arguments `<args>` are explained in [Running the Tool](../running.md).
 
 [Eclipse Temurin]: https://adoptium.net/
-[Zulu]: https://www.azul.com/downloads/?version=java-17-lts&package=jdk#download-openjdk
+[Zulu]: https://www.azul.com/downloads/?version=java-25-lts&package=jdk#download-openjdk
